--- a/src/Hosting/samples/GenericWebHost/GenericWebHost.csproj
+++ b/src/Hosting/samples/GenericWebHost/GenericWebHost.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Hosting" />
     <Reference Include="Microsoft.AspNetCore.Server.Kestrel" />
+    <Reference Include="Microsoft.Extensions.Hosting" />
   </ItemGroup>
 
 </Project>
